--- a/template/admin/products.html
+++ b/template/admin/products.html
@@ -1,4 +1,24 @@
-<!-- client -->
-products
-{{ online }} <!-- online이란 변수를 전달 -->
-{{ message }}
+{% set title = "관리자 리스트" %}
+{% extends "layout/base.html" %}
+
+{% block content -%}
+    <table class="table table-bordered table-hover">
+        <tr>
+            <th>제목</th>
+            <th>작성일</th>
+            <th>삭제</th>
+        </tr>
+        <tr>
+            <td>제주 삼다수</td>
+            <td>
+                2021-01-03
+            </td>
+            <td>
+                <a href="#" class="btn btn-danger">삭제</a>
+            </td>
+        </tr>
+    </table>
+
+    <a href="/admin/products/write" class="btn btn-default">작성하기</a>
+
+{% endblock %} 
